--- a/galeria.html
+++ b/galeria.html
@@ -33,35 +33,35 @@
 
    <div class="row">
     <div class="column">
-        <img alt="foto1" src="imagen/foto1.jpg"/>
-        <img alt="foto2" src="imagen/foto2.jpg"/>
-        <img alt="foto3" src="imagen/foto3.jpg"/>
-        <img alt="foto4" src="imagen/foto4.jpg"/>
-        <img alt="foto5" src="imagen/foto5.jpg"/>
+        <img alt="foto1" src="galeria/imagen/foto1.jpg"/>
+        <img alt="foto2" src="galeria/imagen/foto2.jpg"/>
+        <img alt="foto3" src="galeria/imagen/foto3.jpg"/>
+        <img alt="foto4" src="galeria/imagen/foto4.jpg"/>
+        <img alt="foto5" src="galeria/imagen/foto5.jpg"/>
     </div>
 
     <div class="column">
-        <img alt="foto6" src="imagen/foto6.jpg"/>
-        <img alt="foto7" src="imagen/foto7.jpg"/>
-        <img alt="foto8" src="imagen/foto8.jpg"/>
-        <img alt="foto9" src="imagen/foto9.jpg"/>
-        <img alt="foto10" src="imagen/foto10.jpg"/>
+        <img alt="foto6" src="galeria/imagen/foto6.jpg"/>
+        <img alt="foto7" src="galeria/imagen/foto7.jpg"/>
+        <img alt="foto8" src="galeria/imagen/foto8.jpg"/>
+        <img alt="foto9" src="galeria/imagen/foto9.jpg"/>
+        <img alt="foto10" src="galeria/imagen/foto10.jpg"/>
     </div>
 
     <div class="column">
-        <img alt="foto11" src="imagen/foto11.jpg"/>
-        <img alt="foto12" src="imagen/foto12.jpg"/>
-        <img alt="foto13" src="imagen/foto13.jpg"/>
-        <img alt="foto14" src="imagen/foto14.jpg"/>
-        <img alt="foto15" src="imagen/foto15.jpg"/>
+        <img alt="foto11" src="galeria/imagen/foto11.jpg"/>
+        <img alt="foto12" src="galeria/imagen/foto12.jpg"/>
+        <img alt="foto13" src="galeria/imagen/foto13.jpg"/>
+        <img alt="foto14" src="galeria/imagen/foto14.jpg"/>
+        <img alt="foto15" src="galeria/imagen/foto15.jpg"/>
     </div>
 
     <div class="column">
-        <img alt="foto16" src="imagen/foto16.jpg"/>
-        <img alt="foto17" src="imagen/foto17.jpg"/>
-        <img alt="foto18" src="imagen/foto18.jpg"/>
-        <img alt="foto19" src="imagen/foto19.jpeg"/>
-        <img alt="foto20" src="imagen/foto20.jpeg"/>
+        <img alt="foto16" src="galeria/imagen/foto16.jpg"/>
+        <img alt="foto17" src="galeria/imagen/foto17.jpg"/>
+        <img alt="foto18" src="galeria/imagen/foto18.jpg"/>
+        <img alt="foto19" src="galeria/imagen/foto19.jpeg"/>
+        <img alt="foto20" src="galeria/imagen/foto20.jpeg"/>
     </div>
 
     
