--- a/somos.html
+++ b/somos.html
@@ -18,7 +18,7 @@
 
     <nav>
 
-        <a href="inicio.html">INICIO</a>
+        <a href="index.html">INICIO</a>
         <a href="galeria.html">GALERIA</a>
         <a href="contacto.html">CONTACTO</a>
     </nav>
