--- a/galeria.html
+++ b/galeria.html
@@ -19,7 +19,7 @@
     
     <nav>
 
-    <a href="inicio.html">INICIO</a>
+    <a href="index.html">INICIO</a>
     <a href="somos.html">QUIENES SOMOS</a>
     <a href="contacto.html">CONTACTO</a>
      </nav>
